temp spacing fix

--- a/app/src/components/time-tracker/time-tracker.scss
+++ b/app/src/components/time-tracker/time-tracker.scss
@@ -18,7 +18,7 @@
     grid-gap: 2%;
     margin-top: 150px;
     max-width: 1000px;
-    margin: 150px auto 0 auto;
+    margin: 150px auto 150px auto;
 }
 
 .DailyNotes {
